rm jcenter pub plugin

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@
 
 buildscript {
     repositories {
+        maven {
+            url "http://maven.oschina.net/content/groups/public/"
+        }
         jcenter()
     }
     dependencies {
@@ -9,13 +12,12 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'com.github.dcendents:android-maven-plugin:1.2'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.0'
     }
 }
 
 allprojects {
     repositories {
+        maven {url "http://maven.oschina.net/content/groups/public/" }
         jcenter()
     }
 }
