fix javadoc failing

--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,7 @@
 
 buildscript {
     repositories {
-        maven {
-            url "http://maven.oschina.net/content/groups/public/"
-        }
+        //maven { url "http://maven.oschina.net/content/groups/public/" }
         jcenter()
     }
     dependencies {
@@ -17,7 +15,7 @@ buildscript {
 
 allprojects {
     repositories {
-        maven {url "http://maven.oschina.net/content/groups/public/" }
+        //maven {url "http://maven.oschina.net/content/groups/public/" }
         jcenter()
     }
 }
