--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,14 @@
 
 buildscript {
     repositories {
-        //maven { url "http://maven.oschina.net/content/groups/public/" }
+        maven {
+            url "http://maven.oschina.net/content/groups/public/"
+        }
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
+        classpath 'com.android.tools.build:gradle:1.0.1'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -15,7 +17,7 @@ buildscript {
 
 allprojects {
     repositories {
-        //maven {url "http://maven.oschina.net/content/groups/public/" }
+        maven {url "http://maven.oschina.net/content/groups/public/" }
         jcenter()
     }
 }
