--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,10 @@
 
 buildscript {
     repositories {
-        maven {
-            url "http://maven.oschina.net/content/groups/public/"
-        }
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.0.0'
-
+        classpath 'com.android.tools.build:gradle:2.3.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -17,7 +13,10 @@ buildscript {
 
 allprojects {
     repositories {
-        maven {url "http://maven.oschina.net/content/groups/public/" }
         jcenter()
     }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
