--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,13 @@
 buildscript {
     repositories {
         maven {
-            url "http://maven.oschina.net/content/groups/public/"
+//            url "http://maven.oschina.net/content/groups/public/"
+            url "http://maven.aliyun.com/nexus/content/groups/public"
         }
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.1'
+        classpath 'com.android.tools.build:gradle:2.1.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,7 +18,8 @@ buildscript {
 
 allprojects {
     repositories {
-        maven {url "http://maven.oschina.net/content/groups/public/" }
+//        maven {url "http://maven.oschina.net/content/groups/public/" }
+        maven {url "http://maven.aliyun.com/nexus/content/groups/public" }
         jcenter()
     }
 }
