--- a/example/build.gradle
+++ b/example/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+//    buildToolsVersion "25.0.3"
 
     defaultConfig {
         applicationId "com.github.lzyzsd.jsbridge.example"
