--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,5 @@
 #systemProp.http.proxyHost=127.0.0.1
 #systemProp.https.proxyHost=127.0.0.1
 #systemProp.http.proxyPort=1080
+android.enableJetifier=true
+android.useAndroidX=true
